reached code from videos

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,12 @@
         android:id="@+id/stats"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:text="Hello World!"
+        app:textSize="50sp"
+        app:lineWidth="16dp"
+        app:color1="#FFEB3B"
+        app:color2="#3F51B5"
+        app:color3="#009688"
+        app:color4="#FF5722"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
